style sur la page index et import des polices

--- a/templates/note/all.html.twig
+++ b/templates/note/all.html.twig
@@ -4,8 +4,10 @@
 
 {% block body %}
 <h1>All public notes </h1>
-  {% for item in allNotes %}
-  {{ dump(item) }}
-  <a href="{{ path('app_note_show', {'slug': item.slug})}}">Show</a>
-  {% endfor %}
+<div class="py-10 text-2xl text-center">
+{% set lastMonth = date('2024-07-07')}
+{{dump }}
+published 
+</div>
+
 {% endblock %}
