--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,5 +3,27 @@
 @tailwind utilities;
 
 body {
-    background-color: rgb(196, 219, 228);
+  font-family: "Poppins", sanns-serif;
+  @apply text-lg leading-relaxed text-violet-950;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Bricolage Grotesque", sans-serif;
+  @apply mb-2 font-bold text-violet-600;
+}
+
+h1 {
+  @apply text-4xl;
+}
+
+h2 {
+  @apply text-3xl;
+}
+
+h3 {
+  @apply text-2xl;
+}
+
+h4 {
+  @apply text-xl;
 }
