--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -1,16 +1,23 @@
-<nav class="flex justify-between items-center bg-neutral-100 p-2">
-<img src="https://avatar.iran.liara.run/public" alt="logo" class="" width="32">
-<div class="flex justify-between items-center gap-4">
-<form action="" method="post" class="flex items-center border-2 border-neutral-700 rounded-md p-2">
+<nav class="flex items-center justify-between p-2 bg-neutral-100">
+<a href="{{ path('app_home')}}">
+<img src="{{ asset('/img/logo_dark.svg')}}" alt="logo" class="" width="32">
+<p>CodeXpress</p>
+</a>
+<div class="flex items-center justify-between gap-4">
+<a href="#" class="p-2 rounded-md bg-slate-200">{{ ux_icon('mdi:search', {'class':'h-6 w-6 text-neutral-600 hover:text-violet-600'})}}
+</a>
+
+{# <form action="" method="post" class="flex items-center p-2 border-2 rounded-md border-neutral-700">
 <input type="hidden" name="csrf_token" value="{{ csrf_token('authenticate') }}">
 <input type="text" name="" id="" placeholder="Search notes ..." class="">
 <button type="submit">{{ ux_icon('mdi:search', {'class': 'h-6 w-6'})}}</button>
-</form>
-<div class="flex justify-between items-center gap-4">
-<a href="{{path('app_note_new')}}" class="border border-neutral-700 p-2">{{ ux_icon('mdi:plus-box-outline', {'class':'h-6 w-6'})}}
+</form> #}
+
+<div class="flex items-center justify-between gap-4">
+<a href="{{path('app_note_new')}}" class="p-2 border border-neutral-700">{{ ux_icon('mdi:plus-box-outline', {'class':'h-6 w-6'})}}
 </a>
 
-<a href="{{path('app_profile_edit')}}" class="border border-neutral-700 p-2">{{ ux_icon('mdi:cog-outline', {'class':'h-6 w-6'})}}
+<a href="{{path('app_profile_edit')}}" class="p-2 border border-neutral-700">{{ ux_icon('mdi:cog-outline', {'class':'h-6 w-6'})}}
 </a>
 
 <a href="{{ path('app_note_user', {'username':app.user.username ?? 'martin'})}}" class="p-2 rounded-full">
