--- a/templates/note/user.html.twig
+++ b/templates/note/user.html.twig
@@ -1,11 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ creator.username }}'s notes {% endblock %}
+{% block title %}
+	{{ creator.username }}'s notes
+{% endblock %}
 
 {% block body %}
-<h1>{{ creator.username }}'s notes </h1>
-  {% for item in userNotes %}
-  {{ dump(item) }}
-  <a href="{{ path('app_note_show', {'slug': item.slug})}}">Show</a>
-  {% endfor %}
+	<h1>{{ creator.username }}'s notes
+	</h1>
+	{% for item in userNotes %}
+		{{ dump(item) }}
+		<a href="{{ path('app_note_show', {'slug': item.slug})}}">Show</a>
+	{% endfor %}
 {% endblock %}
